app name modified

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Uyir Coimbatore</string>
+    <string name="app_name">Uyir Coimbatore Stocks</string>
     <string name="save">Save</string>
     <string name="hint_enter_name">Enter Name</string>
     <string name="date">Date</string>
